// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component can be nested within Text and Heading 1`] = `
@media  {
  .c-gPnNdI {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-gPnNdI:focus,
  .c-gPnNdI:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-gPnNdI:active {
    color: var(--colors-primaryDark);
  }

  .c-gPnNdI[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-dyvMgW > .c-gPnNdI,
  .c-jryFOR > .c-gPnNdI,
  .c-PJLV > .c-gPnNdI,
  .c-bYNGXt > .c-gPnNdI {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-gPnNdI::before,
  .c-dyvMgW > .c-gPnNdI::after,
  .c-jryFOR > .c-gPnNdI::before,
  .c-jryFOR > .c-gPnNdI::after,
  .c-PJLV > .c-gPnNdI::before,
  .c-PJLV > .c-gPnNdI::after,
  .c-bYNGXt > .c-gPnNdI::before,
  .c-bYNGXt > .c-gPnNdI::after {
    content: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-jryFOR {
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }
}

@media  {
  .c-gPnNdI-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-gPnNdI-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-gPnNdI-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-gPnNdI-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-gPnNdI-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-gPnNdI-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }

  .c-gPnNdI-fmPQHp-noCapsize-true::before,
  .c-gPnNdI-fmPQHp-noCapsize-true::after {
    display: none !important;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md {
    font-size: var(--fontSizes-xl);
    line-height: 1.14;
  }

  .c-jryFOR-fOoUdm-size-md::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }
}

<div>
  <p
    class="c-dyvMgW c-dyvMgW-gvmVBy-size-md"
  >
    <button
      class="c-gPnNdI c-gPnNdI-gvmVBy-size-md c-gPnNdI-fmPQHp-noCapsize-true"
    >
      TEXT LINK
    </button>
  </p>
  <h2
    class="c-jryFOR c-jryFOR-fOoUdm-size-md"
  >
    <button
      class="c-gPnNdI c-gPnNdI-gvmVBy-size-md c-gPnNdI-fmPQHp-noCapsize-true"
    >
      HEADING LINK
    </button>
  </h2>
</div>
`;

exports[`Link component renders an anchor 1`] = `
@media  {
  .c-gPnNdI {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-gPnNdI:focus,
  .c-gPnNdI:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-gPnNdI:active {
    color: var(--colors-primaryDark);
  }

  .c-gPnNdI[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-dyvMgW > .c-gPnNdI,
  .c-jryFOR > .c-gPnNdI,
  .c-PJLV > .c-gPnNdI,
  .c-bYNGXt > .c-gPnNdI {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-gPnNdI::before,
  .c-dyvMgW > .c-gPnNdI::after,
  .c-jryFOR > .c-gPnNdI::before,
  .c-jryFOR > .c-gPnNdI::after,
  .c-PJLV > .c-gPnNdI::before,
  .c-PJLV > .c-gPnNdI::after,
  .c-bYNGXt > .c-gPnNdI::before,
  .c-bYNGXt > .c-gPnNdI::after {
    content: none;
  }
}

@media  {
  .c-gPnNdI-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-gPnNdI-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-gPnNdI-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

<div>
  <a
    class="c-gPnNdI c-gPnNdI-gvmVBy-size-md"
    href="https://google.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
@media  {
  .c-gPnNdI {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-gPnNdI:focus,
  .c-gPnNdI:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-gPnNdI:active {
    color: var(--colors-primaryDark);
  }

  .c-gPnNdI[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-dyvMgW > .c-gPnNdI,
  .c-jryFOR > .c-gPnNdI,
  .c-PJLV > .c-gPnNdI,
  .c-bYNGXt > .c-gPnNdI {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-gPnNdI::before,
  .c-dyvMgW > .c-gPnNdI::after,
  .c-jryFOR > .c-gPnNdI::before,
  .c-jryFOR > .c-gPnNdI::after,
  .c-PJLV > .c-gPnNdI::before,
  .c-PJLV > .c-gPnNdI::after,
  .c-bYNGXt > .c-gPnNdI::before,
  .c-bYNGXt > .c-gPnNdI::after {
    content: none;
  }
}

@media  {
  .c-gPnNdI-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-gPnNdI-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-gPnNdI-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-gPnNdI-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-gPnNdI-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-gPnNdI-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }
}

<div>
  <a
    class="c-gPnNdI c-gPnNdI-jvTRJO-size-lg"
    href="https://google.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    GOOGLE
  </a>
</div>
`;
